# start-igv-instance

./: Cargo.toml  README.md  package_app.sh
resources/: aarch64-apple-darwin-simple-http-server  x86_64-apple-darwin-simple-http-server
resources/igv-webapp/: app_bundle-2.0.0.js  app_bundle-2.0.0.min.js  app_bundle-2.0.0.min.js.map
resources/igv-webapp/resources/tracks/gencode_annotations/: README_index_commands.md
src/: main.rs
