[package]
name = "run_igv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
colored = "2.1.0"
egui = "0.28.1"
rfd = "0.14.1"
shlex = "1.3.0"
webbrowser = "1.0.1"

[package.metadata.bundle]
name = "run_IGV"
identifier = "com.iit.run_IGV"
icon = ["./resources/igvAppIcon.icns"]
resources = ["./resources/igv-webapp/", "./resources/*simple-http-server*"]
short_description = "Run IGV as a local webserver, together with another webserver for the tracks"
category = "Developer Tool"
